# depman

./: README.md  pyproject.toml  setup.py
depman/: __init__.py  checker.py  cli.py
depman/commands/: checker.py  gm_commands.py
depman/utils/: configs.py
tests/: .cache_configs.yaml  .cache_git_repos.yaml  test_depman.py
